# carillon-server

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  accounts.sample.toml  carillon.sample.toml  default.nix  flake.nix  package.nix  shell.nix
cairn/changes/archive/bootstrap/: delta.md  proposal.md  tasks.md
cairn/changes/credential-custody-boundary/: delta.md  proposal.md  tasks.md
cairn/changes/credential-residency-hardening/: delta.md  proposal.md  tasks.md
cairn/changes/sink-breadth/: delta.md  proposal.md  tasks.md
cairn/changes/sse-change-stream/: delta.md  proposal.md  tasks.md
cairn/changes/starttls-support/: proposal.md  tasks.md
cairn/changes/token-mint-rotate-lifecycle/: proposal.md  tasks.md
cairn/log/: 2026-07-23-bootstrap.md
cairn/spec/: architecture.md  auth.md  billing.md  carddav.md  email.md  hardening.md  nixos.md  overview.md  production.md  service-model.md  serving.md  webhooks.md
docs/: BILLING.md  BILLING_MODEL.md  CARDDAV.md  CARILLON_PLAN.md  DECISIONS.md  DEPLOY_HARDENING.md  EMAIL.md  NIXOS.md  PRODUCTION.md  README.md  ROADMAP.md  SELF_HOST.md  SERVICE_MODEL.md  WEBHOOKS.md  openapi.yaml
examples/: webhook_sink.rs
nix/: container.nix  module.nix  sops.nix  vm.nix
src/: api.rs  billing.rs  config.rs  crypto.rs  delivery.rs  discover.rs  email.rs  event.rs  guard.rs  live.rs  main.rs  metering.rs  oauth.rs  ratelimit.rs  store.rs  supervisor.rs  util.rs
src/carddav/: mod.rs  pump.rs  session.rs
src/imap/: mod.rs  pump.rs  session.rs
tests/: qresync.rs
