[package]
name = "carillon-server"
description = "Carillon watch server prototype: holds IMAP IDLE and emits content-free webhooks"
version = "0.0.1"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
age = "0.12"
anyhow = "1"
axum = "0.8"
base64 = "0.22"
hex = "0.4"
hmac = "0.13"
io-imap = { version = "0.2", default-features = false }
rand = "0.10"
reqwest = { version = "0.13", default-features = false, features = ["rustls", "http2"] }
rusqlite = { version = "0.40", features = ["bundled"] }
rustls = { version = "0.23", features = ["ring"] }
rustls-platform-verifier = "0.7"
secrecy = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
socket2 = "0.6"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "sync", "time", "signal"] }
tokio-rustls = "0.26"
toml = "1.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"

[patch.crates-io]
io-imap.git = "https://github.com/pimalaya/io-imap"
