[package]
name = "carillon-backend"
description = "Carillon backend"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
age = "0.12"
anyhow = "1"
axum = "0.8"
base64 = "0.22"
hex = "0.4"
hmac = "0.13"
io-http = { version = "0.3", default-features = false }
io-imap = { version = "0.2", default-features = false }
io-oauth = { version = "0.2", default-features = false, features = ["rustls-ring"] }
io-pim-discovery = { version = "0.3", default-features = false, features = ["rustls-ring", "autoconfig", "pacc", "rfc6186", "rfc6764", "rfc8414"] }
io-webdav = { version = "0.1", default-features = false }
pimalaya-stream = { version = "0.1", default-features = false, features = ["std"] }
rand = "0.10"
reqwest = { version = "0.13", default-features = false, features = ["rustls", "http2"] }
rusqlite = { version = "0.40", features = ["bundled"] }
rustls = { version = "0.23", features = ["ring"] }
rustls-platform-verifier = "0.7"
secrecy = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
socket2 = "0.6"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "sync", "time", "signal"] }
tokio-rustls = "0.26"
tokio-stream = { version = "0.1", features = ["sync"] }
toml = "1.1"
tower-http = { version = "0.7", features = ["cors", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"

[patch.crates-io]
io-imap.git = "https://github.com/pimalaya/io-imap"
io-webdav.git = "https://github.com/pimalaya/io-webdav"
